cmake_minimum_required(VERSION 3.9)
project(MyProject)

set(CMAKE_CXX_STANDARD 11)

add_executable(MyProject
        Binaries/IOS/Payload/Info.plist
        Binaries/Mac/MyProjectEditor.target
        Binaries/Mac/UE4Editor-MyProject.dylib
        Binaries/Mac/UE4Editor.modules
        Config/DefaultEditor.ini
        Config/DefaultEditorPerProjectUserSettings.ini
        Config/DefaultEngine.ini
        Config/DefaultGame.ini
        Config/DefaultInput.ini
        Content/Geometry/Meshes/1M_Cube.uasset
        Content/Geometry/Meshes/1M_Cube_Chamfer.uasset
        Content/Geometry/Meshes/CubeMaterial.uasset
        Content/Geometry/Meshes/TemplateFloor.uasset
        Content/Mannequin/Animations/ThirdPerson_AnimBP.uasset
        Content/Mannequin/Animations/ThirdPerson_IdleRun_2D.uasset
        Content/Mannequin/Animations/ThirdPerson_Jump.uasset
        Content/Mannequin/Animations/ThirdPersonIdle.uasset
        Content/Mannequin/Animations/ThirdPersonJump_End.uasset
        Content/Mannequin/Animations/ThirdPersonJump_Loop.uasset
        Content/Mannequin/Animations/ThirdPersonJump_Start.uasset
        Content/Mannequin/Animations/ThirdPersonRun.uasset
        Content/Mannequin/Animations/ThirdPersonWalk.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/ML_GlossyBlack_Latex_UE4.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/ML_Plastic_Shiny_Beige.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/ML_Plastic_Shiny_Beige_LOGO.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/ML_SoftMetal_UE4.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/T_ML_Aluminum01.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/T_ML_Aluminum01_N.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/T_ML_Rubber_Blue_01_D.uasset
        Content/Mannequin/Character/Materials/MaterialLayers/T_ML_Rubber_Blue_01_N.uasset
        Content/Mannequin/Character/Materials/M_UE4Man_Body.uasset
        Content/Mannequin/Character/Materials/M_UE4Man_ChestLogo.uasset
        Content/Mannequin/Character/Mesh/SK_Mannequin.uasset
        Content/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.uasset
        Content/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.uasset
        Content/Mannequin/Character/Textures/UE4_LOGO_CARD.uasset
        Content/Mannequin/Character/Textures/UE4_Mannequin__normals.uasset
        Content/Mannequin/Character/Textures/UE4_Mannequin_MAT_MASKA.uasset
        Content/Mannequin/Character/Textures/UE4Man_Logo_N.uasset
        Content/StarterContent/Architecture/Floor_400x400.uasset
        Content/StarterContent/Architecture/Pillar_50x500.uasset
        Content/StarterContent/Architecture/SM_AssetPlatform.uasset
        Content/StarterContent/Architecture/Wall_400x200.uasset
        Content/StarterContent/Architecture/Wall_400x300.uasset
        Content/StarterContent/Architecture/Wall_400x400.uasset
        Content/StarterContent/Architecture/Wall_500x500.uasset
        Content/StarterContent/Architecture/Wall_Door_400x300.uasset
        Content/StarterContent/Architecture/Wall_Door_400x400.uasset
        Content/StarterContent/Architecture/Wall_Window_400x300.uasset
        Content/StarterContent/Architecture/Wall_Window_400x400.uasset
        Content/StarterContent/Audio/Collapse01.uasset
        Content/StarterContent/Audio/Collapse02.uasset
        Content/StarterContent/Audio/Collapse_Cue.uasset
        Content/StarterContent/Audio/Explosion01.uasset
        Content/StarterContent/Audio/Explosion02.uasset
        Content/StarterContent/Audio/Explosion_Cue.uasset
        Content/StarterContent/Audio/Fire01.uasset
        Content/StarterContent/Audio/Fire01_Cue.uasset
        Content/StarterContent/Audio/Fire_Sparks01.uasset
        Content/StarterContent/Audio/Fire_Sparks01_Cue.uasset
        Content/StarterContent/Audio/Light01.uasset
        Content/StarterContent/Audio/Light01_Cue.uasset
        Content/StarterContent/Audio/Light02.uasset
        Content/StarterContent/Audio/Light02_Cue.uasset
        Content/StarterContent/Audio/Smoke01.uasset
        Content/StarterContent/Audio/Smoke01_Cue.uasset
        Content/StarterContent/Audio/Starter_Background_Cue.uasset
        Content/StarterContent/Audio/Starter_Birds01.uasset
        Content/StarterContent/Audio/Starter_Music01.uasset
        Content/StarterContent/Audio/Starter_Music_Cue.uasset
        Content/StarterContent/Audio/Starter_Wind05.uasset
        Content/StarterContent/Audio/Starter_Wind06.uasset
        Content/StarterContent/Audio/Steam01.uasset
        Content/StarterContent/Audio/Steam01_Cue.uasset
        Content/StarterContent/Blueprints/Assets/FogBrightnessLUT.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Arrows.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Black.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_HDRI.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Master.uasset
        Content/StarterContent/Blueprints/Assets/Skybox.uasset
        Content/StarterContent/Blueprints/Assets/SM_Arrows.uasset
        Content/StarterContent/Blueprints/Assets/SunlightColorLUT.uasset
        Content/StarterContent/Blueprints/Blueprint_CeilingLight.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Explosion.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Fire.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Smoke.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Sparks.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Steam.uasset
        Content/StarterContent/Blueprints/Blueprint_WallSconce.uasset
        Content/StarterContent/Blueprints/BP_LightStudio.uasset
        Content/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.uasset
        Content/StarterContent/Maps/Advanced_Lighting.umap
        Content/StarterContent/Maps/Advanced_Lighting_BuiltData.uasset
        Content/StarterContent/Maps/Minimal_Default.umap
        Content/StarterContent/Maps/Minimal_Default_BuiltData.uasset
        Content/StarterContent/Maps/StarterMap.umap
        Content/StarterContent/Maps/StarterMap_BuiltData.uasset
        Content/StarterContent/Materials/M_AssetPlatform.uasset
        Content/StarterContent/Materials/M_Basic_Floor.uasset
        Content/StarterContent/Materials/M_Basic_Wall.uasset
        Content/StarterContent/Materials/M_Brick_Clay_Beveled.uasset
        Content/StarterContent/Materials/M_Brick_Clay_New.uasset
        Content/StarterContent/Materials/M_Brick_Clay_Old.uasset
        Content/StarterContent/Materials/M_Brick_Cut_Stone.uasset
        Content/StarterContent/Materials/M_Brick_Hewn_Stone.uasset
        Content/StarterContent/Materials/M_Ceramic_Tile_Checker.uasset
        Content/StarterContent/Materials/M_CobbleStone_Pebble.uasset
        Content/StarterContent/Materials/M_CobbleStone_Rough.uasset
        Content/StarterContent/Materials/M_CobbleStone_Smooth.uasset
        Content/StarterContent/Materials/M_ColorGrid_LowSpec.uasset
        Content/StarterContent/Materials/M_Concrete_Grime.uasset
        Content/StarterContent/Materials/M_Concrete_Panels.uasset
        Content/StarterContent/Materials/M_Concrete_Poured.uasset
        Content/StarterContent/Materials/M_Concrete_Tiles.uasset
        Content/StarterContent/Materials/M_Glass.uasset
        Content/StarterContent/Materials/M_Ground_Grass.uasset
        Content/StarterContent/Materials/M_Ground_Gravel.uasset
        Content/StarterContent/Materials/M_Ground_Moss.uasset
        Content/StarterContent/Materials/M_Metal_Brushed_Nickel.uasset
        Content/StarterContent/Materials/M_Metal_Burnished_Steel.uasset
        Content/StarterContent/Materials/M_Metal_Chrome.uasset
        Content/StarterContent/Materials/M_Metal_Copper.uasset
        Content/StarterContent/Materials/M_Metal_Gold.uasset
        Content/StarterContent/Materials/M_Metal_Rust.uasset
        Content/StarterContent/Materials/M_Metal_Steel.uasset
        Content/StarterContent/Materials/M_Rock_Basalt.uasset
        Content/StarterContent/Materials/M_Rock_Marble_Polished.uasset
        Content/StarterContent/Materials/M_Rock_Sandstone.uasset
        Content/StarterContent/Materials/M_Rock_Slate.uasset
        Content/StarterContent/Materials/M_Tech_Checker_Dot.uasset
        Content/StarterContent/Materials/M_Tech_Hex_Tile.uasset
        Content/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.uasset
        Content/StarterContent/Materials/M_Tech_Panel.uasset
        Content/StarterContent/Materials/M_Water_Lake.uasset
        Content/StarterContent/Materials/M_Water_Ocean.uasset
        Content/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.uasset
        Content/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.uasset
        Content/StarterContent/Materials/M_Wood_Oak.uasset
        Content/StarterContent/Materials/M_Wood_Pine.uasset
        Content/StarterContent/Materials/M_Wood_Walnut.uasset
        Content/StarterContent/Particles/Materials/M_Burst.uasset
        Content/StarterContent/Particles/Materials/M_Dust_Particle.uasset
        Content/StarterContent/Particles/Materials/M_explosion_subUV.uasset
        Content/StarterContent/Particles/Materials/M_Fire_SubUV.uasset
        Content/StarterContent/Particles/Materials/m_flare_01.uasset
        Content/StarterContent/Particles/Materials/M_Heat_Distortion.uasset
        Content/StarterContent/Particles/Materials/M_Radial_Gradient.uasset
        Content/StarterContent/Particles/Materials/M_radial_ramp.uasset
        Content/StarterContent/Particles/Materials/M_smoke_subUV.uasset
        Content/StarterContent/Particles/Materials/M_Spark.uasset
        Content/StarterContent/Particles/P_Ambient_Dust.uasset
        Content/StarterContent/Particles/P_Explosion.uasset
        Content/StarterContent/Particles/P_Fire.uasset
        Content/StarterContent/Particles/P_Smoke.uasset
        Content/StarterContent/Particles/P_Sparks.uasset
        Content/StarterContent/Particles/P_Steam_Lit.uasset
        Content/StarterContent/Props/Materials/M_Bush.uasset
        Content/StarterContent/Props/Materials/M_Chair.uasset
        Content/StarterContent/Props/Materials/M_Door.uasset
        Content/StarterContent/Props/Materials/M_Frame.uasset
        Content/StarterContent/Props/Materials/M_Lamp.uasset
        Content/StarterContent/Props/Materials/M_MaterialSphere.uasset
        Content/StarterContent/Props/Materials/M_MaterialSphere_Plain.uasset
        Content/StarterContent/Props/Materials/M_Rock.uasset
        Content/StarterContent/Props/Materials/M_Shelf.uasset
        Content/StarterContent/Props/Materials/M_Statue.uasset
        Content/StarterContent/Props/Materials/M_StatueGlass.uasset
        Content/StarterContent/Props/Materials/M_TableRound.uasset
        Content/StarterContent/Props/MaterialSphere.uasset
        Content/StarterContent/Props/SM_Bush.uasset
        Content/StarterContent/Props/SM_Chair.uasset
        Content/StarterContent/Props/SM_CornerFrame.uasset
        Content/StarterContent/Props/SM_Couch.uasset
        Content/StarterContent/Props/SM_Door.uasset
        Content/StarterContent/Props/SM_DoorFrame.uasset
        Content/StarterContent/Props/SM_GlassWindow.uasset
        Content/StarterContent/Props/SM_Lamp_Ceiling.uasset
        Content/StarterContent/Props/SM_Lamp_Wall.uasset
        Content/StarterContent/Props/SM_MatPreviewMesh_02.uasset
        Content/StarterContent/Props/SM_PillarFrame.uasset
        Content/StarterContent/Props/SM_PillarFrame300.uasset
        Content/StarterContent/Props/SM_Rock.uasset
        Content/StarterContent/Props/SM_Shelf.uasset
        Content/StarterContent/Props/SM_Stairs.uasset
        Content/StarterContent/Props/SM_Statue.uasset
        Content/StarterContent/Props/SM_TableRound.uasset
        Content/StarterContent/Props/SM_WindowFrame.uasset
        Content/StarterContent/Shapes/Shape_Cone.uasset
        Content/StarterContent/Shapes/Shape_Cube.uasset
        Content/StarterContent/Shapes/Shape_Cylinder.uasset
        Content/StarterContent/Shapes/Shape_NarrowCapsule.uasset
        Content/StarterContent/Shapes/Shape_Pipe.uasset
        Content/StarterContent/Shapes/Shape_Pipe_180.uasset
        Content/StarterContent/Shapes/Shape_Pipe_90.uasset
        Content/StarterContent/Shapes/Shape_Plane.uasset
        Content/StarterContent/Shapes/Shape_QuadPyramid.uasset
        Content/StarterContent/Shapes/Shape_Sphere.uasset
        Content/StarterContent/Shapes/Shape_Torus.uasset
        Content/StarterContent/Shapes/Shape_Trim.uasset
        Content/StarterContent/Shapes/Shape_Trim_90_In.uasset
        Content/StarterContent/Shapes/Shape_Trim_90_Out.uasset
        Content/StarterContent/Shapes/Shape_TriPyramid.uasset
        Content/StarterContent/Shapes/Shape_Tube.uasset
        Content/StarterContent/Shapes/Shape_Wedge_A.uasset
        Content/StarterContent/Shapes/Shape_Wedge_B.uasset
        Content/StarterContent/Shapes/Shape_WideCapsule.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_M.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_N.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_M.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_N.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Old_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Old_N.uasset
        Content/StarterContent/Textures/T_Brick_Cut_Stone_D.uasset
        Content/StarterContent/Textures/T_Brick_Cut_Stone_N.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_D.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_M.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_N.uasset
        Content/StarterContent/Textures/T_Burst_M.uasset
        Content/StarterContent/Textures/T_Bush_D.uasset
        Content/StarterContent/Textures/T_Bush_N.uasset
        Content/StarterContent/Textures/T_Ceramic_Tile_M.uasset
        Content/StarterContent/Textures/T_Ceramic_Tile_N.uasset
        Content/StarterContent/Textures/T_Chair_M.uasset
        Content/StarterContent/Textures/T_Chair_N.uasset
        Content/StarterContent/Textures/T_Checker_Noise_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_N.uasset
        Content/StarterContent/Textures/T_CobbleStone_Rough_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Rough_N.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_N.uasset
        Content/StarterContent/Textures/T_Concrete_Grime_D.uasset
        Content/StarterContent/Textures/T_Concrete_Panels_D.uasset
        Content/StarterContent/Textures/T_Concrete_Panels_N.uasset
        Content/StarterContent/Textures/T_Concrete_Poured_D.uasset
        Content/StarterContent/Textures/T_Concrete_Poured_N.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_D.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_M.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_N.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_Variation_M.uasset
        Content/StarterContent/Textures/T_Detail_Rocky_N.uasset
        Content/StarterContent/Textures/T_Door_M.uasset
        Content/StarterContent/Textures/T_Door_N.uasset
        Content/StarterContent/Textures/T_Dust_Particle_D.uasset
        Content/StarterContent/Textures/T_Explosion_SubUV.uasset
        Content/StarterContent/Textures/T_Fire_SubUV.uasset
        Content/StarterContent/Textures/T_Fire_Tiled_D.uasset
        Content/StarterContent/Textures/T_Frame_M.uasset
        Content/StarterContent/Textures/T_Frame_N.uasset
        Content/StarterContent/Textures/T_Gradinet_01.uasset
        Content/StarterContent/Textures/T_Ground_Grass_D.uasset
        Content/StarterContent/Textures/T_Ground_Grass_N.uasset
        Content/StarterContent/Textures/T_Ground_Gravel_D.uasset
        Content/StarterContent/Textures/T_Ground_Gravel_N.uasset
        Content/StarterContent/Textures/T_ground_Moss_D.uasset
        Content/StarterContent/Textures/T_Ground_Moss_N.uasset
        Content/StarterContent/Textures/T_Lamp_M.uasset
        Content/StarterContent/Textures/T_Lamp_N.uasset
        Content/StarterContent/Textures/T_MacroVariation.uasset
        Content/StarterContent/Textures/T_Metal_Aluminum_D.uasset
        Content/StarterContent/Textures/T_Metal_Copper_D.uasset
        Content/StarterContent/Textures/T_Metal_Gold_D.uasset
        Content/StarterContent/Textures/T_Metal_Gold_N.uasset
        Content/StarterContent/Textures/T_Metal_Rust_D.uasset
        Content/StarterContent/Textures/T_Metal_Rust_N.uasset
        Content/StarterContent/Textures/T_Metal_Steel_D.uasset
        Content/StarterContent/Textures/T_Metal_Steel_N.uasset
        Content/StarterContent/Textures/T_Perlin_Noise_M.uasset
        Content/StarterContent/Textures/T_Rock_Basalt_D.uasset
        Content/StarterContent/Textures/T_Rock_Basalt_N.uasset
        Content/StarterContent/Textures/T_Rock_Marble_Polished_D.uasset
        Content/StarterContent/Textures/T_Rock_Sandstone_D.uasset
        Content/StarterContent/Textures/T_Rock_Sandstone_N.uasset
        Content/StarterContent/Textures/T_Rock_Slate_D.uasset
        Content/StarterContent/Textures/T_Rock_Slate_N.uasset
        Content/StarterContent/Textures/T_Rock_Smooth_Granite_D.uasset
        Content/StarterContent/Textures/T_RockMesh_M.uasset
        Content/StarterContent/Textures/T_RockMesh_N.uasset
        Content/StarterContent/Textures/T_Shelf_M.uasset
        Content/StarterContent/Textures/T_Shelf_N.uasset
        Content/StarterContent/Textures/T_Single_Tile_N.uasset
        Content/StarterContent/Textures/T_Smoke_SubUV.uasset
        Content/StarterContent/Textures/T_Smoke_Tiled_D.uasset
        Content/StarterContent/Textures/T_Spark_Core.uasset
        Content/StarterContent/Textures/T_Statue_M.uasset
        Content/StarterContent/Textures/T_Statue_N.uasset
        Content/StarterContent/Textures/T_TableRound_M.uasset
        Content/StarterContent/Textures/T_TableRound_N.uasset
        Content/StarterContent/Textures/T_Tech_Dot_M.uasset
        Content/StarterContent/Textures/T_Tech_Dot_N.uasset
        Content/StarterContent/Textures/T_Tech_Hex_Tile_M.uasset
        Content/StarterContent/Textures/T_Tech_Hex_Tile_N.uasset
        Content/StarterContent/Textures/T_Tech_Panel_M.uasset
        Content/StarterContent/Textures/T_Tech_Panel_N.uasset
        Content/StarterContent/Textures/T_Water_M.uasset
        Content/StarterContent/Textures/T_Water_N.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_D.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_M.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_N.uasset
        Content/StarterContent/Textures/T_Wood_Oak_D.uasset
        Content/StarterContent/Textures/T_Wood_Oak_N.uasset
        Content/StarterContent/Textures/T_Wood_Pine_D.uasset
        Content/StarterContent/Textures/T_Wood_Pine_N.uasset
        Content/StarterContent/Textures/T_Wood_Walnut_D.uasset
        Content/StarterContent/Textures/T_Wood_Walnut_N.uasset
        Content/TopDownCPP/Blueprints/M_Cursor_Decal.uasset
        Content/TopDownCPP/Blueprints/TopDownCharacter.uasset
        Content/TopDownCPP/Maps/TopDownExampleMap.umap
        Content/TopDownCPP/Maps/TopDownExampleMap_BuiltData.uasset
        Content/TopDownCPP/TopDownOverview.uasset
        Intermediate/AssetRegistryCache/1f683343.bin
        Intermediate/AssetRegistryCache/2657c409.bin
        Intermediate/AssetRegistryCache/866581fd.bin
        Intermediate/AssetRegistryCache/8c0e1344.bin
        Intermediate/AssetRegistryCache/f0d5030c.bin
        Intermediate/Build/BuildRules/MyProjectModuleRules.dll
        Intermediate/Build/BuildRules/MyProjectModuleRules.dll.mdb
        Intermediate/Build/BuildRules/MyProjectModuleRulesSourceFiles.txt
        Intermediate/Build/Mac/MyProjectEditor/Development/Deploy.dat
        Intermediate/Build/Mac/MyProjectEditor/Development/MyProjectEditor.deps
        Intermediate/Build/Mac/MyProjectEditor/Development/MyProjectEditor.uhtmanifest
        Intermediate/Build/Mac/MyProjectEditor/DependencyCache.bin
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/Definitions.MyProject.h
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProject.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProject.init.gen.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectCharacter.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectCharacter.gen.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectGameMode.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectGameMode.gen.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectPlayerController.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/MyProject/MyProjectPlayerController.gen.cpp.o
        Intermediate/Build/Mac/UE4Editor/Development/DylibCopy.sh
        Intermediate/Build/Mac/UE4Editor/Development/UE4Editor-MyProject.dylib.response
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProject.init.gen.cpp
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectCharacter.gen.cpp
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectCharacter.generated.h
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectClasses.h
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectGameMode.gen.cpp
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectGameMode.generated.h
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectPlayerController.gen.cpp
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/MyProjectPlayerController.generated.h
        Intermediate/Build/Mac/UE4Editor/Inc/MyProject/Timestamp
        Intermediate/Build/ActionHistory.bin
        Intermediate/Config/CoalescedSourceConfigs/AlembicImporter.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidPermission.ini
        Intermediate/Config/CoalescedSourceConfigs/AppleMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/ArchVisCharacter.ini
        Intermediate/Config/CoalescedSourceConfigs/AssetManagerEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/AudioCapture.ini
        Intermediate/Config/CoalescedSourceConfigs/AvfMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/CableComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/CharacterAI.ini
        Intermediate/Config/CoalescedSourceConfigs/CodeLiteSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/Compat.ini
        Intermediate/Config/CoalescedSourceConfigs/CustomMeshComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/DeviceProfiles.ini
        Intermediate/Config/CoalescedSourceConfigs/Editor.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorKeyBindings.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorLayout.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorPerProjectUserSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/Engine.ini
        Intermediate/Config/CoalescedSourceConfigs/ExampleDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/FacialAnimation.ini
        Intermediate/Config/CoalescedSourceConfigs/Game.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTags.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTagsEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTagsList.ini
        Intermediate/Config/CoalescedSourceConfigs/GameUserSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/GitSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/GoogleCloudMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/Hardware.ini
        Intermediate/Config/CoalescedSourceConfigs/HTML5Networking.ini
        Intermediate/Config/CoalescedSourceConfigs/ImmediatePhysics.ini
        Intermediate/Config/CoalescedSourceConfigs/Input.ini
        Intermediate/Config/CoalescedSourceConfigs/InternationalizationExport.ini
        Intermediate/Config/CoalescedSourceConfigs/IOSDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/KDevelopSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/LevelSequenceEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/Lightmass.ini
        Intermediate/Config/CoalescedSourceConfigs/LightPropagationVolume.ini
        Intermediate/Config/CoalescedSourceConfigs/LinuxDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/LocalizationServiceSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/LocationServicesBPLibrary.ini
        Intermediate/Config/CoalescedSourceConfigs/MatineeToLevelSequence.ini
        Intermediate/Config/CoalescedSourceConfigs/MediaPlayerEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/MobileLauncherProfileWizard.ini
        Intermediate/Config/CoalescedSourceConfigs/MobilePatchingUtils.ini
        Intermediate/Config/CoalescedSourceConfigs/NullSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/OculusVR.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystem.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemGooglePlay.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemIOS.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemNull.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemUtils.ini
        Intermediate/Config/CoalescedSourceConfigs/Paper2D.ini
        Intermediate/Config/CoalescedSourceConfigs/PerforceSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/PhysXVehicles.ini
        Intermediate/Config/CoalescedSourceConfigs/PluginBrowser.ini
        Intermediate/Config/CoalescedSourceConfigs/ProceduralMeshComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/RuntimePhysXCooking.ini
        Intermediate/Config/CoalescedSourceConfigs/Scalability.ini
        Intermediate/Config/CoalescedSourceConfigs/SourceControlSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/SpeedTreeImporter.ini
        Intermediate/Config/CoalescedSourceConfigs/SteamVR.ini
        Intermediate/Config/CoalescedSourceConfigs/SubversionSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/TcpMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/TemplateDefs.ini
        Intermediate/Config/CoalescedSourceConfigs/TranslationPickerSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/UdpMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/UObjectPlugin.ini
        Intermediate/Config/CoalescedSourceConfigs/VisualStudioSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/WindowsMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/WmfMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/XCodeSourceCodeAccess.ini
        Intermediate/IOS/MyProject-Info.plist
        Intermediate/Mac/MyProject-Info.plist
        Intermediate/Mac/MyProject-Mac-DebugGame-Info.plist
        Intermediate/Mac/MyProject-Mac-Shipping-Info.plist
        Intermediate/ProjectFiles/build/MyProject.build/Development/MyProject_Index.build/Objects-normal/x86_64/MyProject.LinkFileList
        Intermediate/ProjectFiles/build/MyProject.build/Development/MyProject_Index.build/dgph
        "Intermediate/ProjectFiles/build/MyProject.build/Development Editor/MyProject.build/dgph"
        "Intermediate/ProjectFiles/build/MyProject.build/Development Editor/MyProject_Build.build/dgph"
        Intermediate/ProjectFiles/build/SharedPrecompiledHeaders/UnrealEd-duouwoilmydixlcpohmzvezghrde/UnrealEd.h.pch.hash-criteria
        Intermediate/ProjectFiles/build/SharedPrecompiledHeaders/UnrealEd-falidwiutwqwnqcvhcuiparuhxyt/UnrealEd.h.pch.hash-criteria
        Intermediate/ProjectFiles/build/SharedPrecompiledHeaders/UnrealEd-gkfmsxqjtyvclegnswpyoxvdenrh/UnrealEd.h.pch.hash-criteria
        Intermediate/ProjectFiles/build/UE4.build/Development/UE4_Index.build/Objects-normal/x86_64/UE4Game.LinkFileList
        Intermediate/ProjectFiles/build/UE4.build/Development/UE4_Index.build/dgph
        Intermediate/ProjectFiles/MyProject.xcodeproj/xcshareddata/xcschemes/MyProject.xcscheme
        Intermediate/ProjectFiles/MyProject.xcodeproj/xcuserdata/anupvasudevan.xcuserdatad/xcschemes/xcschememanagement.plist
        Intermediate/ProjectFiles/MyProject.xcodeproj/project.pbxproj
        Intermediate/ProjectFiles/UE4.xcodeproj/xcshareddata/xcschemes/UE4.xcscheme
        Intermediate/ProjectFiles/UE4.xcodeproj/xcuserdata/anupvasudevan.xcuserdatad/xcschemes/xcschememanagement.plist
        Intermediate/ProjectFiles/UE4.xcodeproj/project.pbxproj
        Intermediate/ReimportCache/724588881.bin
        Intermediate/CachedAssetRegistry.bin
        MyProject.xcworkspace/xcuserdata/anupvasudevan.xcuserdatad/UserInterfaceState.xcuserstate
        MyProject.xcworkspace/xcuserdata/anupvasudevan.xcuserdatad/WorkspaceSettings.xcsettings
        MyProject.xcworkspace/contents.xcworkspacedata
        Saved/Autosaves/PackageRestoreData.json
        Saved/Backup/Floor_400x400_2018-01-24-04-29-39.uasset
        Saved/AutoScreenshot.png
        Source/MyProject/MyProject.Build.cs
        Source/MyProject/MyProject.cpp
        Source/MyProject/MyProject.h
        Source/MyProject/MyProjectCharacter.cpp
        Source/MyProject/MyProjectCharacter.h
        Source/MyProject/MyProjectGameMode.cpp
        Source/MyProject/MyProjectGameMode.h
        Source/MyProject/MyProjectPlayerController.cpp
        Source/MyProject/MyProjectPlayerController.h
        Source/MyProject.Target.cs
        Source/MyProjectEditor.Target.cs
        MyProject.uproject)
